# polyhedral_common

./: .gitignore  .gitmodules  .yamllint.yml  BUILDING.md  CLAUDE.md  CMakeLists.txt  DEVELOPER.md  INSTALL.md  README.md  WeightMatrixLimited.h  clean.sh  compile.sh  compile_docker.sh  compile_dualdesc.sh  src_basic  src_comb  src_graph  src_matrix  src_number  update.sh
.github/: pull_request_template.md
Benchmarks/: CDD_Desc_around27secs.ext
CI_tests/: README.md  access_functions.g  access_points.g  common.g
ExternalLib/LibShort/: CMakeLists.txt  Makefile.binaries  Makefile_Macintosh_lib  Makefile_lib  README  finddel.c  la_support.c  la_support.h  lll_basis.c  lll_basis.h  lrsgmp.c  lrsgmp.h  lrslib.c  lrslib.h  panic.c  panic.h  shvec.c  shvec.h  sv.c
ExternalLib/bliss/: CMakeLists.txt  Makefile  Makefile_lib  README  graph.cc
ExternalLib/nauty/: CMakeLists.txt  gtools.h  nauty.h
Manuals/: PerfectComplex.tex  makefile
PythonScript/: LOGS_FindRange  LOGS_ProcessTimings  TIMINGS_ProcessLogFile
basic_common_cpp/: README.md
doc/: polyhedral_documentation.tex
julia/: custom_monodromy.jl  monodromy_one_run.jl  monodromy_seed.jl  multistart_critical.jl  n2_handwritten_sanity.jl  quantizer_numerical.jl  quantizer_polynomial.jl  run_monodromy_batch.jl  run_numerical.jl  test_numerical_monodromy.jl
script_docker/: Dockerfile
scripts/: remove_directories_from_linting.sh
src/: BadExample  BasicThreadInclude.h  CP_CopositiveListCone.cpp  CP_CopositiveMin.cpp  CP_TestCopositivity.cpp  CVP_NiemeierAlgo.h  ComputePerfect.cpp  Copositivity.h  EXMPL_ITER48  EnumerationConfig.h  FundamentalDelaunay.h  GRP_OrbitSplitting.cpp  GSL_related.h  InitialQuadPerfectMatrix.cpp  IterationAlgorithm.h  LATT_lll.cpp  LAT_lll.in  LAT_lll2.in  LAT_lll3.in  LAT_lll4.in  LAT_lll5.in  LatticeDefinitions.h  MPI_plans  Makefile  Makefile_single_oper  MatrixGroup.h  MatrixSing  NiemeierN23_24A1.h  POLY_ComputeEngelSymbol.cpp  POLY_CreateAffineBasis.cpp  POLY_IntegralPoints.cpp  POLY_LinearProgram.cpp  POLY_LinearProgramming_GLPK.h  POLY_PolytopeFct.h  POLY_PolytopeInt.h  POLY_ThreadedADM.cpp  POLY_cddlib.h  POLY_lp_cdd.cpp  POLY_lrs.cpp  POLY_lrs_set.cpp  (+22 more)
src_basic/: Basic_file.h  Basic_string.h  Namelist.h  StorageHistorical.h  Temp_common.h
src_copos/: CP_ComputeCopositiveMin.cpp  CP_CopositiveKernelMin.cpp  CP_CopositiveListCone.cpp  CP_CopositiveMaxNorm.cpp  CP_CopositiveMin.cpp  CP_TestCompletePositivity.cpp  CP_TestCopositivity.cpp  CP_TestStrictCopositivity.cpp  Copositivity.h  Makefile  Makefile_oscar  Makefile_spec  README.md  StrictPositivity.h
src_ctype/: CTYP_CheckAdjacency.cpp  CTYP_CheckCanonical.cpp  CTYP_ComputeHashStat.cpp  CTYP_ComputeInvariant_B.cpp  CTYP_ComputeMaxCoefficients.cpp  CTYP_ComputeStatistics.cpp  CTYP_LookForNoFreeVector.cpp  CTYP_MPI_AdjScheme.cpp  CTYP_MPI_EnumerationAdjacencies.cpp  CTYP_MPI_Enumeration_c.cpp  CTYP_PrepareInitialFile.cpp  CTYP_SearchMatrix.cpp  CTYP_TimingRandomAccess.cpp  CtypeMPI_enumeration.h  CtypeMPI_types.h  FileMatrix_Dim3_init  FileMatrix_Dim6_init  Makefile  Makefile_MPI_AdjScheme  Makefile_spec  NC_ComputeAverage.cpp  POLY_c_cddlib_mpq.cpp  README.md  create_netcdf5.nml  create_netcdf6.nml
src_ctype_mpi/: CTYP_CheckAdjacency.cpp  CTYP_CheckCanonical.cpp  CTYP_ComputeInvariant.cpp  CTYP_ComputeMaxCoefficients.cpp  CTYP_ComputeStatistics.cpp  CTYP_LookForNoFreeVector.cpp  CTYP_MPI_AdjScheme.cpp  CTYP_MPI_Enumeration.cpp  CTYP_MPI_EnumerationAdjacencies.cpp  CTYP_MPI_Enumeration_c.cpp  CTYP_MPI_Enumeration_debug.cpp  CTYP_MakeInitialFile.cpp  CTYP_MergeLogs.cpp  CTYP_PrepareAdjacencyFile.cpp  CTYP_PrepareInitialFile.cpp  CTYP_SearchMatrix.cpp  CTYP_TimingRandomAccess.cpp  CtypeMPI_enumeration.h  CtypeMPI_types.h  Ctype_functionality.h  FileMatrix_Dim2_init  FileMatrix_Dim4_init  MakeInitial_FileMatrix.cpp  Makefile  Makefile_MPI_AdjScheme  Makefile_spec  MergePartialLogs.cpp  Temp_CTypeMPI.cpp  create_netcdf5.nml  create_netcdf6.nml  ctype_adj_enum5.nml  ctype_enum5.nml  ctype_enum6.nml
src_delaunay/: FreeVectors.h  FundamentalDelaunay.h  IsoDelaunayDomains.h  IsoDelaunayDomains_mpi.h  LATT_AnalysisIsoDelaunay.cpp  LATT_ExportQuantizerLtype.cpp  LATT_FindOneVertex.cpp  LATT_LookForFullRankRayDomain.cpp  LATT_MPI_ComputeDelaunay.cpp  LATT_MPI_Lattice_IsoDelaunayDomain.cpp  LATT_QuantizationDeformation.cpp  LATT_QuantizationDeformationOrbits.cpp  LATT_SerialComputeDelaunay.cpp  LATT_SerialLattice_IsoDelaunayDomain.cpp  LatticeDelaunay.h  LatticeDelaunay_mpi.h  Makefile  Makefile_ComputeDelaunay  Makefile_spec  Makefile_tspace_isodelaunay  QuantizationDeformation.h  QuantizationIntegral.h  QuantizerLtypeExport.h  Rigidity.h  jet.h  lt_complex.h  polynomial.h
src_dualdesc/: Balinski_basic.h  ConvertNC_to_NC_FB_FF.cpp  CoveringSphericalCode.h  DD_ConvertGAP_to_NC.cpp  Databank.h  Databank_asio.h  Databank_mpi.h  MPI_basic.h  MPI_functionality.h  Makefile  Makefile_CI  Makefile_facelatticegen  Makefile_sampling_facets  Makefile_serial_dualdesc  Makefile_spec  POLY_AdjacencyScheme.h  POLY_CheckCanonicalGAP.cpp  POLY_DatabaseRestructuration.cpp  POLY_DirectFaceLattice.cpp  POLY_DirectSerialDualDesc.cpp  POLY_EquivariantDecomposition.h  POLY_EquivariantTriangulation.h  POLY_EvaluateBalinski.cpp  POLY_EvaluateDualDesc.cpp  POLY_FaceLatticeGen.cpp  POLY_FindNeededBalinski.cpp  POLY_GAP.h  POLY_Heuristics.h  POLY_HeuristicsFile.h  POLY_MPI_AdjacencyScheme.h  POLY_MPI_DualDesc.cpp  POLY_NetcdfToGAP.cpp  POLY_Parall.h  POLY_ReadPartialEnum.cpp  POLY_RecursiveDualDesc.h  POLY_RecursiveDualDesc_MPI.h  POLY_RunTheBank.cpp  POLY_SerialDualDesc.cpp  POLY_UpgradeDatabase.cpp  POLY_c_cddlib_mpq.cpp  (+14 more)
src_enum_schemes/: POLY_AdjacencyScheme.h  POLY_CellComplex.h  POLY_EquivariantDecomposition.h  POLY_MPI_AdjacencyScheme.h  POLY_MPI_CellComplex.h  SystemNamelist.h
src_export_oscar/: CP_TestCompletePositivity.cpp  CP_TestCopositivity.cpp  GRP_LinPolytope_Automorphism.cpp  GRP_LinPolytope_Automorphism_GramMat.cpp  GRP_LinPolytope_Isomorphism_GramMat.cpp  GRP_ListMat_Subset_EXT_Automorphism.cpp  GRP_ListMat_Subset_EXT_Invariant.cpp  LATT_near.cpp  (+23 more)
(+1956 files in other folders)
